proj1/tests/correct/nested_if_0.py
i = 20
if i < 100:
    if i < 0:
        print "low"
    else:
        print "mid"
