proj1/tests/error/bad_elif_0.py
i = 0
elif i == 0:
    println "hello"
